# vmecpp-benchmarks

./: LICENSE.txt  README.md  bench.py  bench.sh  comparison_plot.py  logs.txt  pyproject.toml  requirements.txt  run_vmec2000.py  run_vmecpp.py
data/: input.precise_qa_beta1_mn12_ns99  input.precise_qa_beta1_mn5_ns51  input.w7x_beta1_mn5_ns51
